src/objects/Potential_Sales_Ideas__c/Potential_Sales_Ideas__c.object-meta.xml
<CustomObject>
    <description>For Tech Support to capture potential sales opportunities that do not currently quality as leads</description>
    <label>Potential Sales Ideas</label>
    <nameField>
        <label>Potential Sales Ideas Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Potential Sales Ideas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>