src/objects/Potential_Sales_Ideas__c/fields/Aircraft_Type__c.field-meta.xml
<CustomField>
    <fullName>Aircraft_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aircraft Type</label>
    <referenceTo>Aircraft_Type__c</referenceTo>
    <relationshipLabel>Potential Sales Ideas</relationshipLabel>
    <relationshipName>Potential_Sales_Ideas</relationshipName>
    <type>Lookup</type>
</CustomField>