src/objects/Potential_Sales_Ideas__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Potential Sales Ideas</relationshipLabel>
    <relationshipName>Potential_Sales_Ideas</relationshipName>
    <type>Lookup</type>
</CustomField>