src/objects/Potential_Sales_Ideas__c/fields/Estimated_Value__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Value__c</fullName>
    <label>Rev Won/HON Savings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>