src/objects/Potential_Sales_Ideas__c/fields/GBE__c.field-meta.xml
<CustomField>
    <fullName>GBE__c</fullName>
    <label>GBE</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Air &amp; Thermal</fullName>
            </value>
            <value>
                <fullName>BendixKing</fullName>
            </value>
            <value>
                <fullName>Cockpit Systems</fullName>
            </value>
            <value>
                <fullName>Engines</fullName>
            </value>
            <value>
                <fullName>FM&amp;T</fullName>
            </value>
            <value>
                <fullName>HCE Aircraft</fullName>
            </value>
            <value>
                <fullName>Mechanical Components</fullName>
            </value>
            <value>
                <fullName>Navigation &amp; Sensors</fullName>
            </value>
            <value>
                <fullName>Power Systems</fullName>
            </value>
            <value>
                <fullName>Safety Systems</fullName>
            </value>
            <value>
                <fullName>Services &amp; Connectivity</fullName>
            </value>
            <value>
                <fullName>Space</fullName>
            </value>
            <value>
                <fullName>Wheels &amp; Braking Systems</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>