src/objects/Potential_Sales_Ideas__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ACST</fullName>
            </value>
            <value>
                <fullName>Advanced Technology</fullName>
            </value>
            <value>
                <fullName>Advertisement</fullName>
            </value>
            <value>
                <fullName>AeroUp</fullName>
            </value>
            <value>
                <fullName>AeroVue Launch</fullName>
            </value>
            <value>
                <fullName>Aircraft Demo</fullName>
            </value>
            <value>
                <fullName>ASM Generated</fullName>
            </value>
            <value>
                <fullName>AVP Survey</fullName>
            </value>
            <value>
                <fullName>Bank</fullName>
            </value>
            <value>
                <fullName>Barnett Dealer Introduction</fullName>
            </value>
            <value>
                <fullName>Basel ToR</fullName>
            </value>
            <value>
                <fullName>Bombardier OEM</fullName>
            </value>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Citation Jet Pilots</fullName>
            </value>
            <value>
                <fullName>Cold-call</fullName>
            </value>
            <value>
                <fullName>Connected Aircraft</fullName>
            </value>
            <value>
                <fullName>Connected Enterprise Resiliency</fullName>
            </value>
            <value>
                <fullName>CSM Generated</fullName>
            </value>
            <value>
                <fullName>CSO</fullName>
            </value>
            <value>
                <fullName>Dassault OEM</fullName>
            </value>
            <value>
                <fullName>EASY II Forecast</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Embraer OEM</fullName>
            </value>
            <value>
                <fullName>Employee Referral</fullName>
            </value>
            <value>
                <fullName>EPS</fullName>
                <isActive>false</isActive>
                <label>EPS</label>
            </value>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Execs</fullName>
            </value>
            <value>
                <fullName>External Referral</fullName>
            </value>
            <value>
                <fullName>FBO Sponsorship</fullName>
            </value>
            <value>
                <fullName>FSE Generated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>