src/objects/Potential_Sales_Ideas__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Converted- PSI has been converted to a LEAD, Rejected - PIS has been rejected, Reviewed/Agreement- Manager review idea and approved to continue with Sales department ,In Progress - Sales Analysis is researching to pre-qualify before becoming a Sales Leads</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Closed</fullName>
                <isActive>false</isActive>
                <label>Closed</label>
            </value>
            <value>
                <fullName>Converted</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
                <isActive>false</isActive>
                <label>Open</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Reviewed/Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>