src/objects/Potential_Sales_Ideas__c/recordTypes/Potential_Sales_Ideas.recordType-meta.xml
<RecordType>
    <fullName>Potential_Sales_Ideas</fullName>
    <active>true</active>
    <label>Potential Sales Ideas</label>
</RecordType>