src/objects/Potential_Sales_Ideas__c/listViews/GTO_Potential_Sales_Ideas.listView-meta.xml
<ListView>
    <fullName>GTO_Potential_Sales_Ideas</fullName>
    <columns>Sales_Idea_Number__c</columns>
    <columns>Product_Information__c</columns>
    <columns>NAME</columns>
    <columns>Estimated_Value__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Tier_4_Teams__c</columns>
    <columns>Source__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Source__c</field>
        <operation>equals</operation>
        <value>CSM Generated,CSO,EPS,FSE Generated,FTS Generated</value>
    </filters>
    <label>GTO Potential Sales Ideas</label>
    <language>en_US</language>
</ListView>