src/objects/Potential_Sales_Ideas__c/listViews/My_Potential_Ideas.listView-meta.xml
<ListView>
    <fullName>My_Potential_Ideas</fullName>
    <columns>Sales_Idea_Number__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Lead_Owner__c</columns>
    <columns>Product_Information__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Potential Ideas</label>
    <language>en_US</language>
</ListView>